feat: Refine automatic cart discount application logic
- Added `automatic` field to `CartDiscount` domain and DTOs.
- Implemented `findApplicableAutomaticDiscounts` in `CartDiscountRepository` to efficiently filter automatic discounts (both code-less and explicitly marked `automatic`) based on cart contents (product, category, brand).
- Updated `CartClientServiceImpl` to use the new repository method, ensuring only relevant automatic discounts are fetched and processed.
- Added comprehensive unit tests in `CartClientServiceImplTest` to verify application and restriction logic.
- Ensured applicable automatic discounts with codes are persisted to the cart.

Co-authored-by: middlesboro <1727159+middlesboro@users.noreply.github.com>